# trader

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  ruff.toml
advisor/: chatbot.py
alembic/: env.py
alembic/versions/: 61daf192a24b_create_initial_tables.py
core/bot/: client.py  config.py  models.py
core/db/: config.py  session.py  utils.py
core/discord/: config.py  utils.py
core/finance/dart/: config.py  model.py  request.py  url.py
core/finance/kis/: client.py  config.py  config_test.py  trader.py
core/rss/: urls.py  utils.py
core/scheduler/: __main__.py  instance.py  jobs.py  spec.py
core/utils/: args.py  indicator.py  time.py
docker/: Dockerfile  docker-compose.yml
docker/mysql_init/: init-finance-tables-1.sql  init-trade-tables-2.sql
kis/: client.py  config.py  config_test.py
migrations/: alembic.finance.ini  alembic.trade.ini
migrations/finance_db/: env.py
migrations/trade_db/: env.py
trade/advisor/: __init__.py  base.py  build_candidate_stock.py  chatbot.py  main.py  tables.py
trade/data/: __init__.py  build_corporate_info.py  build_corporate_quote.py  tables.py
trading/: jobs.py
trading/asset/: wallet.py
trading/auto/: __init__.py  base.py  main.py
trading/backtest/: pipeline.py
trading/database/: __init__.py  base.py  run_pipeline.py
trading/mixin/: configs.py
trading/model/: base.py  llm.py  type.py  wallet.py
trading/runners/: __init__.py  base.py
trading/strategy/: base.py
(+19 files in other folders)
